# autonomous-surveillance-demo

./: .gitignore  README.md
cloud/: README.md  app.py  requirements.txt
cloud/dynamo/: consumer.py  publisher.py  resource.py
cloud/greengrass/: resource.py  systemd.py
cloud/stream_processor/: handler.py  resource.py
cloud/webrtc/: handler.py  resource.py
robot/: README.md
robot/policies/: iot-role-alias-policy.json  kvs-policy.json  trust-relationship-policy.json
robot/robot_ws/src/autonomous_surveillance/: CMakeLists.txt  package.xml
robot/robot_ws/src/autonomous_surveillance/launch/: controller.launch  navigation.launch  robot_navigation.launch
robot/robot_ws/src/autonomous_surveillance/nodes/: battery_state_publisher  location_publisher  map_controller  navigation  remote_controller
robot/robot_ws/src/autonomous_surveillance/settings/: settings.yaml
robot/systemd/: autonomous_surveillance.service  kvs-webrtc.service  roscore.service  turtlebot.service
tablet/: README.md
tablet/remote_controller/: index.html  stylesheet.css  stylesheet.css.map  stylesheet.scss
tablet/remote_controller/js/: app-kvs.js  capture.js  gameController.js  viewer.js
